3er Commit de la Clase

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <!-- Logo con link a la página principal -->
       <a href="/" class="logo">
-        <img src="/Users/franciscojavierbuenovasquez/Documents/matcha/imagenes/logo.png" alt="Matcha"/>
+        <img src="https://d9hhrg4mnvzow.cloudfront.net/78623f278ef64bcb93b1ec00d14acddc.pages.ubembed.com/2d327758-c689-4f07-8118-689d876ee85c/bafee502-logo-whitebg-horiz_09802g000000000000001.png" alt="Matcha"/>
       </a>
       <!-- Menú de navegación -->
       <nav class="navbar">
